--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -73,7 +73,8 @@
     "okay": "Окей",
     "updateTime": "Обновить время",
     "setPassword": "Установить пароль",
-    "locale_code": "ru"
+    "locale_code": "ru",
+    "appName": "Cloudy"
   },
   "home": {
     "dailyGratitude": "Дневник благодарности",
@@ -264,7 +265,7 @@
     "uniqueBlend": "Уникальное сочетание вашей истории",
     "dailyServing": "Дневная порция",
     "menuHighlights": "Хиты меню",
-    "fanFavorite": "Любимое фанатами",
+    "fanFavorite": "Ваш фаворит",
     "firstCourse": "Первое блюдо",
     "dailySpecial": "Блюдо дня",
     "topPick": "Лучший выбор",
@@ -367,7 +368,7 @@
     "companion": "Твой маленький спутник на пути к ясному уму."
   },
   "statistics": {
-    "title": "Глубокий анализ",
+    "title": "Инсайты",
     "analysis": "Анализ Cloudy",
     "description": "Числовые закономерности вашей истории",
     "keyMetrics": "Ключевые показатели",
@@ -474,6 +475,10 @@
     "title": "Не переживайте!",
     "message": "Вы пропустили день, но это часть пути. Начнём новую серию сегодня!",
     "button": "Поехали"
+  },
+  "streakFreeze": {
+    "title": "Серия защищена! ❄️",
+    "message": "Вы пропустили день, но Dreamy использовал магию, чтобы сохранить вашу серию. Не останавливайтесь!"
   },
   "lockScreen": {
     "title": "Cloudy защищён",
